Handle prevention info section

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
     <title>CovCare</title>
   </head>
   <body>
